Fix sortable jump when dragging, alter block selector layout

--- a/app/assets/stylesheets/forest/partials/_blocks.scss
+++ b/app/assets/stylesheets/forest/partials/_blocks.scss
@@ -1,5 +1,9 @@
 // Blocks
 
+.block_slots {
+  overflow: auto;
+}
+
 .block-kind__select2-response__icon {
   line-height: 1.4;
   vertical-align: top;
